# ft-playground

./: Cargo.toml  gilcu3-token-1.json  gilcu3-token-2.json
src/: lib.rs
tests/: common.rs
