[package]
name = "fungible-token"
version = "1.0.0"
authors = ["Near Inc <hello@nearprotocol.com>", "gilcu3"]
edition = "2021"
repository = "https://github.com/gilcu3/ft-playground"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.17.2"
near-contract-standards = "5.17.2"

[dev-dependencies] 
near-sdk = { version = "5.17.2", features = ["unit-testing"] }
near-workspaces = { version = "0.21.0", features = ["unstable"] }
anyhow = "1.0.100"
tokio = { version = "1.48.0", features = ["full"] }
cargo-near-build = "0.9.0"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.17.0-rust-1.86.0n"
image_digest = "sha256:1784ca6310f3496f0048356ce420921c8f5fdf71ee8124d43a2e1ceb1f70db8a"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]
